<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateMyProfile">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/updateprotitle"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:hint="@string/updateprofilename"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/updateprofileemail"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/updateprofileage"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/updateprofilepass"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="@string/updateprofilepackage"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/updateprobutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:background="@color/button"
        android:text="@string/updateprofilebuttons"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="24sp" />

</LinearLayout>