<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CustomerLogin" >


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/loginlogo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="10dp"
        android:text="@string/customerlogintit"
        android:textColor="@color/button"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/logphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phonelog"
        android:inputType="phone" />

    <EditText
        android:id="@+id/loginpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/logpass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:background="@color/button"
        android:text="@string/cuslogbutton"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

    <TextView
        android:id="@+id/textViewAdminLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="230dp"
        android:layout_marginTop="25dp"
        android:text="Admin login >>"
        android:textSize="24sp" />


</LinearLayout>