<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Wellcomepage">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_marginTop="1dp"
        android:layout_height="151dp"
        app:srcCompat="@drawable/loginlogo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="10dp"
        android:text="@string/welocometit"
        android:textColor="@color/button_colorGoldS"
        android:textSize="36sp" />

    <Button
        android:id="@+id/welcomegymb"
        android:layout_width="366dp"
        android:layout_height="68dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="10dp"
        android:background="@color/button_colorS"
        android:text="@string/welcomegym"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="370dp"
        android:layout_height="71dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/button_colorS"
        android:text="@string/welocomesup"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="24sp" />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="370dp"
        android:layout_height="69dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/button_colorS"
        android:text="@string/welcomelogout"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="24sp" />
</LinearLayout>